# findutils

./: .appveyor.yml  .gitignore  .pre-commit-config.yaml  .travis.yml  AUTHORS  CONTRIBUTING.md  Cargo.toml  DEVELOPMENT.md  Dockerfile.compat  LICENSE  README.md  SECURITY.md  dist-workspace.toml  oranda.json  test_data_db  test_data_db_unix
.cargo/: config.toml
.config/: cargo.toml
.github/: dependabot.yml
.github/workflows/: audit.yml  ci.yml  codspeed.yml  comment.yml  compat.yml  ignore-intermittent.txt  release.yml
benches/: find_bench.rs  locate_bench.rs  updatedb_bench.rs  xargs_bench.rs
docs/: book.toml
docs/src/: SUMMARY.md  build.md  extensions.md  index.md  installation.md  platforms.md  test_coverage.md
src/: db_tests.rs  lib.rs
src/find/: main.rs  mod.rs
src/find/matchers/: access.rs  and_matcher.rs  caseless_name_matcher.rs  context.rs  delete.rs  empty.rs  entry.rs  exec.rs  fs.rs  glob.rs  group.rs  lname.rs  logical_matchers.rs  ls.rs  mod.rs  name.rs  name_matcher.rs  path.rs  perm.rs  printer.rs  printf.rs  prune.rs  quit.rs  regex.rs  samefile.rs  size.rs  stat.rs  time.rs  type_matcher.rs  user.rs
src/locate/: main.rs  mod.rs
src/testing/commandline/: main.rs
src/updatedb/: main.rs  mod.rs
src/xargs/: main.rs  mod.rs
test_data/db/: invalid_db  test_data_db
tests/: db_tests.rs  exec_unit_tests.rs  find_cmd_tests.rs  find_exec_tests.rs  test_find.rs  test_xargs.rs  xargs_tests.rs
tests/common/: mod.rs  test_helpers.rs
util/: bfs_json_result.py  build-bfs.sh  build-gnu.sh  common.sh  compare_bfs_result.py  compare_gnu_result.py  compare_test_results.py  diff-bfs.sh  diff-gnu.sh  docker-compat.sh  gnu_json_result.py
