[package]
name = "findutils"
version = "0.8.0"
homepage = "https://github.com/uutils/findutils"
repository = "https://github.com/uutils/findutils"
edition = "2021"
license = "MIT"
readme = "README.md"
description = "Rust implementation of GNU findutils"
authors = ["uutils developers"]

[dependencies]
chrono = "0.4.41"
clap = "4.5"
faccess = "0.2.4"
walkdir = "2.5"
regex = "1.11"
onig = { version = "6.4", default-features = false }
uucore = { version = "0.0.30", features = ["entries", "fs", "fsext", "mode"] }
nix = { version = "0.30", features = ["fs", "user"] }
argmax = "0.3.1"

[target.'cfg(target_os = "linux")'.dependencies]
xattr = "1.5.0"

[dev-dependencies]
assert_cmd = "2"
filetime = "0.2"
nix = { version = "0.30", features = ["fs"] }
predicates = "3"
serial_test = "3.2"
tempfile = "3"
pretty_assertions = "1.4.1"

[[bin]]
name = "find"
path = "src/find/main.rs"

[[bin]]
name = "xargs"
path = "src/xargs/main.rs"

[[bin]]
name = "testing-commandline"
path = "src/testing/commandline/main.rs"

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"


[lints.clippy]
multiple_crate_versions = "allow"
cargo_common_metadata = "allow"
uninlined_format_args = "allow"
missing_panics_doc = "allow"

use_self = "warn"
needless_pass_by_value = "warn"
semicolon_if_nothing_returned = "warn"
single_char_pattern = "warn"
explicit_iter_loop = "warn"
if_not_else = "warn"
manual_let_else = "warn"
# Disable for now, we have a few occurrences
# panic = "warn"
