[package]
name = "findutils"
version = "0.9.0"
homepage = "https://github.com/uutils/findutils"
repository = "https://github.com/uutils/findutils"
edition = "2021"
license = "MIT"
readme = "README.md"
description = "Rust implementation of GNU findutils"
authors = ["uutils developers"]

[dependencies]
argmax = "0.4.0"
chrono = "0.4.45"
clap = { version = "4.6", features = ["env"] }
faccess = "0.2.4"
nix = { version = "0.31", features = ["fs", "user"] }
onig = { version = "6.5", default-features = false }
regex = "1.12"
uucore = { version = "0.9.0", features = ["entries", "fs", "fsext", "mode"] }
walkdir = "2.5"
itertools = "0.14.0"
thiserror = "2.0.12"

[dev-dependencies]
criterion = { version = "4.7.0", package = "codspeed-criterion-compat" }
assert_cmd = "2"
ctor = "1.0"
filetime = "0.2"
nix = { version = "0.31", features = ["fs"] }
rstest = "0.26.1"
tempfile = "3"
uutests = "0.9.0"

[[bench]]
name = "find_bench"
harness = false

[[bench]]
name = "xargs_bench"
harness = false

[[bench]]
name = "updatedb_bench"
harness = false

[[bench]]
name = "locate_bench"
harness = false

[[bin]]
name = "find"
path = "src/find/main.rs"

[[bin]]
name = "locate"
path = "src/locate/main.rs"

[[bin]]
name = "updatedb"
path = "src/updatedb/main.rs"

[[bin]]
name = "xargs"
path = "src/xargs/main.rs"

[[bin]]
name = "testing-commandline"
path = "src/testing/commandline/main.rs"

[profile.release]
lto = "thin"
codegen-units = 1

[profile.release-fast]
inherits = "release"
panic = "abort"

[lints.clippy]
multiple_crate_versions = "allow"
cargo_common_metadata = "allow"
uninlined_format_args = "allow"
missing_panics_doc = "allow"

use_self = "warn"
needless_pass_by_value = "warn"
semicolon_if_nothing_returned = "warn"
single_char_pattern = "warn"
explicit_iter_loop = "warn"
if_not_else = "warn"
manual_let_else = "warn"
# Disable for now, we have a few occurrences
# panic = "warn"
